Fix bug map